data/derived/sp14/progs/unify/prog3668.ml.out
Characters 198-199:
  if prod > 10 then lastDigit::[firstDigit + mulByDigit(i t)]
                                                        ^
Error: This expression has type int
       This is not a function; it cannot be applied.
